Gestiti alcuni warning